<resources>
    <string name="app_name">DevArt</string>
    <string name="item_0">Intro</string>
    <string name="item_1_1">Arg 1.1</string>
    <string name="item_1_2">Arg 1.2</string>
    <string name="item_1_3">Arg 1.3</string>
    <string name="test_cat_1">Fragment</string>
    <string name="test_cat_2">Base.Impl</string>
    <string name="test_cat_3">Component</string>
    <string name="test_cat_4">Utils</string>
    <string name="test_cat_5">Command</string>
    <string name="item_2_1">Adapter &amp; Loader</string>
    <string name="item_2_2">Dialog</string>
    <string name="item_2_3">Popup</string>
    <string name="item_2_4">Service &amp; Mutax</string>
    <string name="item_3_1">HScrollLayout &amp; PointBar</string>
    <string name="item_3_2">VScrollLayout</string>
    <string name="item_3_2_1">Gif</string>
    <string name="item_3_3">PullDownLayout</string>
    <string name="item_3_4">PullDownListView</string>
    <string name="item_3_4_1">DragListView</string>
    <string name="item_3_4_2">WaterfallView</string>
    <string name="item_3_4_3">FlipView</string>
    <string name="item_3_4_4">Swipe</string>
    <string name="item_3_5">SlideMenu</string>
    <string name="item_3_6">FloatWindow</string>
    <string name="item_3_7">Tab</string>
    <string name="item_3_8">Calendar</string>
    <string name="item_3_9">LockView</string>
    <string name="item_3_10">GlassBar</string>
    <string name="item_3_11">DragGrid</string>
    <string name="item_3_12">ArcMenu</string>
    <string name="item_3_13">FlowText</string>
    <string name="item_3_14">Progress</string>
    <string name="item_3_15">Badger</string>
    <string name="item_3_16">CoverFlow</string>
    <string name="item_3_17">CropImage</string>
    <string name="item_4_1">Device</string>
    <string name="item_4_2">Download</string>
    <string name="item_4_3">File</string>
    <string name="item_4_3_1">Json</string>
    <string name="item_4_4">HttpRequest</string>
    <string name="item_4_5">Image</string>
    <string name="item_4_6">Network</string>
    <string name="item_4_7">Notification</string>
    <string name="item_4_8">UI</string>
    <string name="item_4_9">Zip</string>
    <string name="item_4_10">Algorithm</string>
    <string name="item_5_1">Terminal</string>
    <string name="item_5_2">BlackTech</string>
    <string name="fragment_intro">Intro</string>
    <string name="menu_item_1">Item 1</string>
    <string name="menu_item_2">Item 2</string>
    <string name="menu_item_3">Item 3</string>
    <string name="menu_item_4">Item 4</string>
    <string name="menu_item_5">Item 5</string>
    <string name="menu_item_6">Item 6</string>
    <string name="argument_name">ArgumentFragment</string>
    <string name="argument_name_with_path">MainActivity &gt; ArgumentFragment</string>
    <string name="adapter_name">AdapterFragment</string>
    <string name="adapter_name_with_path">MainActivity &gt; AdapterFragment</string>
    <string name="popup_name">PopupFragment</string>
    <string name="service_name">Service</string>
    <string name="scroll_name">ScrollFragment</string>
    <string name="scroll_name_with_path">MainActivity &gt; ScrollFragment</string>
    <string name="pulldown_listview_name">PullDownListViewFragment</string>
    <string name="pulldown_listview_name_with_path">MainActivity &gt; PullDownListViewFragment</string>
    <string name="pulldown_layout_name">PullDownLayoutFragment</string>
    <string name="pulldown_layout_name_with_path">MainActivity &gt; PullDownLayoutFragment</string>
    <string name="slidemenu_name">SlideMenuFragment</string>
    <string name="device_name">DeviceFragment</string>
    <string name="device_name_with_path">MainActivity &gt; DeviceFragment</string>
    <string name="download_name">DownloadFragment</string>
    <string name="download_name_with_path">MainActivity &gt; DownloadFragment</string>
    <string name="file_name">FileFragment</string>
    <string name="file_name_with_path">MainActivity &gt; FileFragment</string>
    <string name="http_request_name">HttpRequestFragment</string>
    <string name="http_request_name_with_path">MainActivity &gt; HttpRequestFragment</string>
    <string name="image_name">ImageFragment</string>
    <string name="image_name_with_path">MainActivity &gt; ImageFragment</string>
    <string name="network_name">NetworkFragment</string>
    <string name="network_name_with_path">MainActivity &gt; NetworkFragment</string>
    <string name="notification_name">NotificationFragment</string>
    <string name="notification_name_with_path">MainActivity &gt; NotificationFragment</string>
    <string name="ui_name">UIFragment</string>
    <string name="ui_name_with_path">MainActivity &gt; UIFragment</string>
    <string name="run_name">RunFragment</string>
    <string name="run_name_with_path">MainActivity &gt; RunFragment</string>
    <string name="float_window_name">FloatWindow</string>
    <string name="float_window_name_with_path">MainActivity &gt; FloatWindow</string>
    <string name="tab_name">TabFragment</string>
    <string name="tab_name_with_path">MainActivity &gt; TabFragment</string>
    <string name="drag_listview_name">DragListViewFragment</string>
    <string name="drag_listview_name_with_path">MainActivity &gt; DragListViewFragment</string>
    <string name="waterfall_name">WaterfallFragment</string>
    <string name="waterfall_name_with_path">MainActivity &gt; WaterfallFragment</string>
    <string name="flipview_name">FlipViewFragment</string>
    <string name="flipview_name_with_path">MainActivity &gt; FlipViewFragment</string>
    <string name="dynamic_metro_name">DynamicMetroFragment</string>
    <string name="json_name">JsonFragment</string>
    <string name="json_name_with_path">MainActivity &gt; JsonFragment</string>
    <string name="gif_name">GifFragment</string>
    <string name="gif_name_with_path">MainActivity &gt; GifFragment</string>
    <string name="swipe_name">SwipeFragment</string>
    <string name="swipe_name_with_path">MainActivity &gt; SwipeFragment</string>
    <string name="zip_name">ZipFragment</string>
    <string name="zip_name_with_path">MainActivity &gt; ZipFragment</string>
    <string name="blacktech_name">BlackTechFragment</string>
    <string name="blacktech_name_with_path">MainActivity &gt; BlackTechFragment</string>
    <string name="algorithm_name">AlgorithmFragment</string>
    <string name="algorithm_name_with_path">MainActivity &gt; AlgorithmFragment</string>
    <string name="calendar_name">CalendarFragment</string>
    <string name="calendar_name_with_path">MainActivity &gt; CalendarFragment</string>
    <string name="lockview_name">LockFragment</string>
    <string name="lockview_name_with_path">MainActivity &gt; LockFragment</string>
    <string name="emuview_name">Terminal</string>
    <string name="emuview_name_with_path">MainActivity &gt; Terminal</string>
    <string name="glassbar_name">GlassBarFragment</string>
    <string name="glassbar_name_with_path">MainActivity &gt; GlassBarFragment</string>
    <string name="draggrid_name">DragGridFragment</string>
    <string name="draggrid_name_with_path">MainActivity &gt; DragGridFragment</string>
    <string name="arcmenu_name">ArcMenuFragment</string>
    <string name="arcmenu_name_with_name">MainActivity &gt; ArcMenuFragment</string>
    <string name="flowtext_name">FlowTextFragment</string>
    <string name="flowtext_name_with_name">MainActivity &gt; FlowTextFragment</string>
    <string name="progress_name">ProgressFragment</string>
    <string name="progress_name_with_path">MainActivity &gt; ProgressFragment</string>
    <string name="badger_name">BadgerFragment</string>
    <string name="badger_name_with_path">MainActivity &gt; BadgerFragment</string>
    <string name="coverflow_name">CoverFlow</string>
    <string name="coverflow_name_with_path">MainActivity &gt; CoverFlow</string>
    <string name="crop_name">CropFragment</string>
    <string name="crop_name_with_path">MainActivity &gt; CropFragment</string>
    <string name="btn_show_id">Show ID</string>
    <string name="btn_close">Close</string>
    <string name="btn_1">Button 1</string>
    <string name="btn_2">Button 2</string>
    <string name="service_detail">Detail Information</string>
    <string name="service_finished">Service finished</string>
    <string name="btn_download">Download</string>
    <string name="ok">OK</string>
    <string name="btn_read">Read</string>
    <string name="btn_write">Write</string>
    <string name="btn_read_assets">Read Assets</string>
    <string name="btn_http_request">Http Request</string>
    <string name="btn_rotate">Rotate</string>
    <string name="btn_flip">Flip</string>
    <string name="btn_round">Round</string>
    <string name="btn_black_white">B &amp; W</string>
    <string name="btn_blur">Blur</string>
    <string name="btn_show_notification">Show Notification</string>
    <string name="btn_hide_notification">Hide Notification</string>
    <string name="chk_can_close">Can Close</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_desc">Notification Description</string>
    <string name="et_command">Enter a command</string>
    <string name="btn_run">Run</string>
    <string name="btn_show_float_window">Show Float Window</string>
    <string name="btn_hide_float_window">Hide Float Window</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</string>
</resources>