<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <CheckBox android:id="@+id/chkCanClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_can_close"
        android:checked="true"/>

    <Button
        android:id="@+id/btnShowNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_notification"
        android:layout_below="@+id/chkCanClose" />

    <Button
        android:id="@+id/btnHideNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShowNotification"
        android:text="@string/btn_hide_notification" />

</RelativeLayout>