<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:scaleType="centerInside" />

    <ImageView
        android:id="@+id/ivChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivOrigin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dip"
        android:contentDescription="@null"
        android:scaleType="centerInside" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivChanged"
        android:layout_marginTop="8dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_rotate" />

            <Button
                android:id="@+id/btnFlip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_flip" />

            <Button
                android:id="@+id/btnRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_round" />

            <Button
                android:id="@+id/btnBlackWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_black_white" />

            <Button
                android:id="@+id/btnBlur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_blur" />
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>