<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnWrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_write" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnWrite"
        android:text="@string/btn_read" />

    <Button
        android:id="@+id/btnReadAssets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRead"
        android:text="@string/btn_read_assets" />

    <TextView android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnReadAssets"
        android:gravity="left|top" />

</RelativeLayout>